after ok add attributes for product
