# app/Models/Property.php
@@ -3,8 +3,12 @@
 namespace App\Models;
 
 use Illuminate\Database\Eloquent\Model;
+use Illuminate\Database\Eloquent\Relations\BelongsToMany;
 
 class Property extends Model
 {
-    //
+    public function products(): BelongsToMany
+    {
+        return $this->belongsToMany('App\Models\Product');
+    }
 }
