# routes/api.php
@@ -52,6 +52,7 @@ Route::group(['prefix'=>'admin'] , function(){
         Route::get('products/title_is_exist/{title}','ProductController@titleIsExist');
         Route::put('products/{id}','ProductController@update');
         Route::delete('products/{id}','ProductController@destroy');
+        Route::post('products/{id}/add_attr','ProductController@addAttr');
 
         Route::get('colors','ColorController@index');
         Route::post('colors','ColorController@store');
